Add directory management to integration tests and enforce dirId requirement
Changes:
- Add DirSteps test helper class for directory operations (create, get, rename, move, delete)
- Update NoteSteps to require dirId parameter for create and update operations
- Update all 30 integration tests to create directories before creating notes
- Add DirSteps bean to test configuration
- Update NoteCommandMapper field ordering for consistency
- Improve validation messages in CreateNoteRequest and UpdateNoteRequest
- Add TODO for directories table cleanup once schema is implemented

All tests are structured and ready for directory API implementation.