@@ -18,8 +18,11 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
         // GIVEN - User is registered and authenticated
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
 
+        // GIVEN - User creates a directory
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+
         // WHEN - User creates a note
-        var note = noteSteps.createNote(token, "My First Note", "This is the content of my note");
+        var note = noteSteps.createNote(token, "My First Note", "This is the content of my note", directory.getId());
 
         // THEN - Note is created with correct properties
         assertThat(note).isNotNull();
@@ -33,9 +36,10 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldGetNoteById() {
-        // GIVEN - User creates a note
+        // GIVEN - User creates a directory and a note
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var createdNote = noteSteps.createNote(token, "Note Title", "Note Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var createdNote = noteSteps.createNote(token, "Note Title", "Note Content", directory.getId());
 
         // WHEN - User retrieves the note by ID
         var retrievedNote = noteSteps.getNote(token, createdNote.id());
@@ -49,12 +53,13 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldUpdateNoteTitle() {
-        // GIVEN - User creates a note
+        // GIVEN - User creates a directory and a note
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var createdNote = noteSteps.createNote(token, "Original Title", "Original Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var createdNote = noteSteps.createNote(token, "Original Title", "Original Content", directory.getId());
 
         // WHEN - User updates the note title
-        var updatedNote = noteSteps.updateNote(token, createdNote.id(), "Updated Title", null);
+        var updatedNote = noteSteps.updateNote(token, createdNote.id(), "Updated Title", "Original Content", directory.getId());
 
         // THEN - Note title is updated, content remains unchanged
         assertThat(updatedNote).isNotNull();
@@ -66,12 +71,13 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldUpdateNoteContent() {
-        // GIVEN - User creates a note
+        // GIVEN - User creates a directory and a note
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var createdNote = noteSteps.createNote(token, "Title", "Original Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var createdNote = noteSteps.createNote(token, "Title", "Original Content", directory.getId());
 
         // WHEN - User updates the note content
-        var updatedNote = noteSteps.updateNote(token, createdNote.id(), null, "Updated Content");
+        var updatedNote = noteSteps.updateNote(token, createdNote.id(), "Title", "Updated Content", directory.getId());
 
         // THEN - Note content is updated, title remains unchanged
         assertThat(updatedNote).isNotNull();
@@ -82,16 +88,18 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldUpdateNoteTitleAndContent() {
-        // GIVEN - User creates a note
+        // GIVEN - User creates a directory and a note
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var createdNote = noteSteps.createNote(token, "Original Title", "Original Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var createdNote = noteSteps.createNote(token, "Original Title", "Original Content", directory.getId());
 
         // WHEN - User updates both title and content
         var updatedNote = noteSteps.updateNote(
             token,
             createdNote.id(),
             "New Title",
-            "New Content"
+            "New Content",
+            directory.getId()
         );
 
         // THEN - Both title and content are updated
@@ -102,9 +110,10 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldDeleteNote() {
-        // GIVEN - User creates a note
+        // GIVEN - User creates a directory and a note
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var createdNote = noteSteps.createNote(token, "Note to Delete", "Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var createdNote = noteSteps.createNote(token, "Note to Delete", "Content", directory.getId());
 
         // WHEN - User deletes the note
         noteSteps.deleteNote(token, createdNote.id());
@@ -116,11 +125,12 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldGetAllUserNotes() {
-        // GIVEN - User creates multiple notes
+        // GIVEN - User creates a directory and multiple notes
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        noteSteps.createNote(token, "Note 1", "Content 1");
-        noteSteps.createNote(token, "Note 2", "Content 2");
-        noteSteps.createNote(token, "Note 3", "Content 3");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        noteSteps.createNote(token, "Note 1", "Content 1", directory.getId());
+        noteSteps.createNote(token, "Note 2", "Content 2", directory.getId());
+        noteSteps.createNote(token, "Note 3", "Content 3", directory.getId());
 
         // WHEN - User retrieves all their notes
         var notes = noteSteps.getUserNotes(token);
@@ -133,12 +143,15 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldIsolateUserNotes() {
-        // GIVEN - Two users create notes
+        // GIVEN - Two users create directories and notes
         var token1 = userSteps.registerAndGetToken("user1@example.com", "password123");
         var token2 = userSteps.registerAndGetToken("user2@example.com", "password123");
 
-        var note1 = noteSteps.createNote(token1, "User 1 Note", "Content 1");
-        var note2 = noteSteps.createNote(token2, "User 2 Note", "Content 2");
+        var directory1 = dirSteps.createRootDirectory(token1, "User 1 Notes");
+        var directory2 = dirSteps.createRootDirectory(token2, "User 2 Notes");
+
+        var note1 = noteSteps.createNote(token1, "User 1 Note", "Content 1", directory1.getId());
+        var note2 = noteSteps.createNote(token2, "User 2 Note", "Content 2", directory2.getId());
 
         // WHEN - Each user retrieves their notes
         var user1Notes = noteSteps.getUserNotes(token1);
@@ -146,10 +159,10 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
         // THEN - Each user sees only their own notes
         assertThat(user1Notes).hasSize(1);
-        assertThat(user1Notes.get(0).title()).isEqualTo("User 1 Note");
+        assertThat(user1Notes.getFirst().title()).isEqualTo("User 1 Note");
 
         assertThat(user2Notes).hasSize(1);
-        assertThat(user2Notes.get(0).title()).isEqualTo("User 2 Note");
+        assertThat(user2Notes.getFirst().title()).isEqualTo("User 2 Note");
 
         // THEN - User 1 cannot access User 2's note
         // Note: Depending on security implementation, this could be 403 or 404
@@ -174,20 +187,25 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldFailCreateNoteWithoutAuthentication() {
+        // GIVEN - User creates a directory
+        var token = userSteps.registerAndGetToken("user@example.com", "password123");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+
         // WHEN - Attempt to create note without token
         // THEN - Request is rejected with 401 Unauthorized
-        noteSteps.createNoteAndGetResponse(null, "Title", "Content")
+        noteSteps.createNoteAndGetResponse(null, "Title", "Content", directory.getId())
             .statusCode(401);
     }
 
     @Test
     void shouldFailCreateNoteWithBlankTitle() {
-        // GIVEN - Authenticated user
+        // GIVEN - Authenticated user with directory
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
 
         // WHEN - Attempt to create note with blank title
         // THEN - Validation error 400
-        noteSteps.createNoteAndGetResponse(token, "", "Content")
+        noteSteps.createNoteAndGetResponse(token, "", "Content", directory.getId())
             .statusCode(400)
             .body("status", equalTo(400))
             .body("path", equalTo("/api/v1/notes"));
@@ -195,12 +213,13 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldFailCreateNoteWithNullTitle() {
-        // GIVEN - Authenticated user
+        // GIVEN - Authenticated user with directory
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
 
         // WHEN - Attempt to create note with null title
         // THEN - Validation error 400
-        noteSteps.createNoteAndGetResponse(token, null, "Content")
+        noteSteps.createNoteAndGetResponse(token, null, "Content", directory.getId())
             .statusCode(400)
             .body("status", equalTo(400))
             .body("path", equalTo("/api/v1/notes"));
@@ -208,14 +227,15 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldFailCreateNoteWithTooLongTitle() {
-        // GIVEN - Authenticated user
+        // GIVEN - Authenticated user with directory
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
 
         // WHEN - Attempt to create note with title exceeding 255 characters
         String longTitle = "a".repeat(256);
 
         // THEN - Validation error 400
-        noteSteps.createNoteAndGetResponse(token, longTitle, "Content")
+        noteSteps.createNoteAndGetResponse(token, longTitle, "Content", directory.getId())
             .statusCode(400)
             .body("status", equalTo(400))
             .body("path", equalTo("/api/v1/notes"));
@@ -239,14 +259,15 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldFailUpdateNonExistentNote() {
-        // GIVEN - Authenticated user
+        // GIVEN - Authenticated user with directory
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
 
         // WHEN - Attempt to update non-existent note
         UUID nonExistentId = UUID.randomUUID();
 
         // THEN - 404 Not Found
-        noteSteps.updateNoteAndGetResponse(token, nonExistentId, "New Title", "New Content")
+        noteSteps.updateNoteAndGetResponse(token, nonExistentId, "New Title", "New Content", directory.getId())
             .statusCode(404)
             .body("status", equalTo(404))
             .body("path", equalTo("/api/v1/notes/" + nonExistentId));
@@ -269,9 +290,10 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldFailGetNoteWithoutAuthentication() {
-        // GIVEN - A note exists
+        // GIVEN - A directory and note exist
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var note = noteSteps.createNote(token, "Title", "Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var note = noteSteps.createNote(token, "Title", "Content", directory.getId());
 
         // WHEN - Attempt to get note without authentication
         // THEN - 401 Unauthorized
@@ -281,21 +303,23 @@ class NoteFlowIntegrationTest extends BaseIntegrationTest {
 
     @Test
     void shouldFailUpdateNoteWithoutAuthentication() {
-        // GIVEN - A note exists
+        // GIVEN - A directory and note exist
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var note = noteSteps.createNote(token, "Title", "Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var note = noteSteps.createNote(token, "Title", "Content", directory.getId());
 
         // WHEN - Attempt to update note without authentication
         // THEN - 401 Unauthorized
-        noteSteps.updateNoteAndGetResponse(null, note.id(), "New Title", "New Content")
+        noteSteps.updateNoteAndGetResponse(null, note.id(), "New Title", "New Content", directory.getId())
             .statusCode(401);
     }
 
     @Test
     void shouldFailDeleteNoteWithoutAuthentication() {
-        // GIVEN - A note exists
+        // GIVEN - A directory and note exist
         var token = userSteps.registerAndGetToken("user@example.com", "password123");
-        var note = noteSteps.createNote(token, "Title", "Content");
+        var directory = dirSteps.createRootDirectory(token, "My Notes");
+        var note = noteSteps.createNote(token, "Title", "Content", directory.getId());
 
         // WHEN - Attempt to delete note without authentication
         // THEN - 401 Unauthorized
